--- a/View/HarmonogramyDetails.xaml
+++ b/View/HarmonogramyDetails.xaml
@@ -4,8 +4,8 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:FtpDiligent"
-             mc:Ignorable="d" 
-             d:DesignHeight="800" d:DesignWidth="980">
+             mc:Ignorable="d" d:DesignHeight="770" d:DesignWidth="980"
+             KeyDown="OnKeyDown">
     <Grid Background="{StaticResource Tlo}">
         <Grid.RowDefinitions>
             <RowDefinition/>
