--- a/View/MainWindow.xaml
+++ b/View/MainWindow.xaml
@@ -3,9 +3,8 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:FtpDiligent"
         mc:Ignorable="d"
-        Title="FtpDiligent" Height="800" Width="1000" ResizeMode="NoResize"
+        Title="FtpDiligent" Height="800" Width="1000"
         Icon="/Images/ftpgetw.ico"
         Closed="Window_Closed">
     <TabControl Name="tcMain">
