--- a/View/Sterowanie.xaml
+++ b/View/Sterowanie.xaml
@@ -3,7 +3,6 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:FtpDiligent"
              mc:Ignorable="d" 
              d:DesignHeight="770" d:DesignWidth="980">
     <Grid Background="{StaticResource Tlo}">
@@ -12,21 +11,47 @@
             <RowDefinition/>
             <RowDefinition Height="350"/>
         </Grid.RowDefinitions>
-        <Canvas>
-            <TextBox Canvas.Left="10" Canvas.Top="10" Text="Tryb pobierania:" IsReadOnly="True"/>
-            <ComboBox Canvas.Left="10" Canvas.Top="30" Name="cbSyncMode" Width="200" Height="27" IsEnabled="{Binding IsEnabled, ElementName=btRunSync}"/>
-            <Button Canvas.Left="498" Canvas.Top="23" Name="btRunSync" Content="Uruchom przesyłanie" Click="OnStartSync"/>
-            <Button Canvas.Left="658" Canvas.Top="23" Name="btStopSync" Content="Zatrzymaj przesyłanie" IsEnabled="False" Click="OnStopSync"/>
-            <Button Canvas.Left="818" Canvas.Top="23" Name="btClearLog" Content="Wyczyść komunikaty" Click="OnClearLog"/>
-        </Canvas>
-        <Canvas Grid.Row="1">
-            <TextBox Canvas.Left="10" Canvas.Top="10" Text="Komunikaty bieżące:" IsReadOnly="True"/>
-            <TextBox Canvas.Left="160" Name="tbNextSync" Canvas.Top="10" IsReadOnly="True" Width="810" TextAlignment="Right"/>
-            <ListBox Canvas.Top="32" Name="lbLog" Height="280" Width="960" Canvas.Left="10"/>
-        </Canvas>
-        <Canvas Grid.Row="2">
-            <TextBox Canvas.Left="10" Canvas.Top="12" Text="Informacje o błędach:" IsReadOnly="True"/>
-            <ListView Canvas.Left="10" Canvas.Top="32" Name="lvErrLog" Height="310" Width="475">
+        <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="30" />
+                <RowDefinition />
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="210" />
+                <ColumnDefinition />
+            </Grid.ColumnDefinitions>
+            <TextBox Margin="10 10 0 0" Text="Tryb pobierania:" Width="90" HorizontalAlignment="Left" IsReadOnly="True"/>
+            <ComboBox Grid.Row="1" Margin="10 2 0 10" Name="cbSyncMode" Width="200" Height="26" IsEnabled="{Binding IsEnabled, ElementName=btRunSync}"/>
+            <StackPanel Grid.Row="1" Grid.Column="1" Orientation="Horizontal" HorizontalAlignment="Right">
+                <Button Margin="0 2 0 10" Name="btRunSync" Content="Uruchom przesyłanie" Click="OnStartSync"/>
+                <Button Margin="10 2 0 10" Name="btStopSync" Content="Zatrzymaj przesyłanie" IsEnabled="False" Click="OnStopSync"/>
+                <Button Margin="10 2 10 10" Name="btClearLog" Content="Wyczyść komunikaty" Click="OnClearLog"/>
+            </StackPanel>
+        </Grid>
+        <Grid Grid.Row="1">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="20" />
+                <RowDefinition />
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="125" />
+                <ColumnDefinition />
+            </Grid.ColumnDefinitions>
+            <TextBox Margin="10 0 0 0" Text="Komunikaty bieżące:" IsReadOnly="True"/>
+            <TextBox Grid.Column="1" Margin="0 0 10 0" Width="700" Name="tbNextSync" IsReadOnly="True" TextAlignment="Right" HorizontalAlignment="Right"/>
+            <ListBox Grid.Row="1" Grid.ColumnSpan="2" Margin="10,2,10,10" Name="lbLog"/>
+        </Grid>
+        <Grid Grid.Row="2">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="20" />
+                <RowDefinition />
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition />
+                <ColumnDefinition />
+            </Grid.ColumnDefinitions>
+            <TextBox Margin="10 0 5 0" Height="20" HorizontalAlignment="Left" Text="Informacje o błędach:" IsReadOnly="True"/>
+            <ListView Grid.Row="1" Margin="10 2 5 10" Name="lvErrLog">
                 <ListView.View>
                     <GridView>
                         <GridViewColumn Header="Status">
@@ -49,8 +74,8 @@
                     </GridView>
                 </ListView.View>
             </ListView>
-            <TextBox Canvas.Left="495" Canvas.Top="12" Name="tbFilesCount" Text="{Binding Mode=OneWay, StringFormat=Przesłane pliki [{0}]:}" IsReadOnly="True"/>
-            <ListView Name="lvFilesLog" Canvas.Left="495" Canvas.Top="32" Height="310" Width="475" ItemsSource="{Binding}">
+            <TextBox Grid.Column="1" Margin="5 0 10 0" Height="20" HorizontalAlignment="Left" Name="tbFilesCount" Text="{Binding Mode=OneWay, StringFormat=Przesłane pliki [{0}]:}" IsReadOnly="True"/>
+            <ListView Grid.Row="1" Grid.Column="1" Margin="5 2 10 10" Name="lvFilesLog" ItemsSource="{Binding}">
                 <ListView.View>
                     <GridView>
                         <GridViewColumn Header="Operacja">
@@ -69,6 +94,6 @@
                     </GridView>
                 </ListView.View>
             </ListView>
-        </Canvas>
+        </Grid>
     </Grid>
 </UserControl>
