--- a/App.xaml
+++ b/App.xaml
@@ -1,8 +1,7 @@
 ﻿<Application x:Class="FtpDiligent.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:FtpDiligent"
-             StartupUri="View/MainWindow.xaml">
+             xmlns:local="clr-namespace:FtpDiligent">
     <Application.Resources>
         <local:SelectedItemEnabler x:Key="SelectedItemEnabler"/>
         <local:DayNameLocalisator x:Key="DayNameLocalisator"/>
