--- a/Views/HarmonogramyDetails.xaml
+++ b/Views/HarmonogramyDetails.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="FtpDiligent.HarmonogramyDetails"
+﻿<UserControl x:Class="FtpDiligent.Views.HarmonogramyDetails"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
