--- a/Views/SerweryDetails.xaml
+++ b/Views/SerweryDetails.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="FtpDiligent.SerweryDetails"
+﻿<UserControl x:Class="FtpDiligent.Views.SerweryDetails"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
