--- a/Views/Sterowanie.xaml
+++ b/Views/Sterowanie.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="FtpDiligent.Sterowanie"
+﻿<UserControl x:Class="FtpDiligent.Views.Sterowanie"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
