--- a/App.xaml
+++ b/App.xaml
@@ -1,6 +1,7 @@
-﻿<Application x:Class="FtpDiligent.App"
+﻿<prism:PrismApplication x:Class="FtpDiligent.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:prism="http://prismlibrary.com/"
              xmlns:local="clr-namespace:FtpDiligent">
     <Application.Resources>
         <local:SelectedItemEnabler x:Key="SelectedItemEnabler"/>
@@ -63,4 +64,4 @@
             <Setter Property="Background" Value="{Binding RelativeSource={RelativeSource Self}, Path=(ItemsControl.AlternationIndex), Converter={StaticResource ListViewBackgroundConverter}}"/>
         </Style>
     </Application.Resources>
-</Application>
+</prism:PrismApplication>
