--- a/Views/Harmonogramy.xaml
+++ b/Views/Harmonogramy.xaml
@@ -1,9 +1,11 @@
 ﻿<UserControl x:Class="FtpDiligent.Views.Harmonogramy"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             mc:Ignorable="d" 
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:prism="http://prismlibrary.com/"
+             prism:ViewModelLocator.AutoWireViewModel="True"
+             mc:Ignorable="d"
              d:DesignHeight="770" d:DesignWidth="980">
     <Grid Background="{StaticResource Tlo}">
         <Grid.RowDefinitions>
@@ -17,7 +19,9 @@
         </Grid.ColumnDefinitions>
         <Canvas>
             <TextBox Canvas.Left="10" Canvas.Top="10" Text="Serwer:" IsReadOnly="True"/>
-            <ComboBox Canvas.Left="10" Canvas.Top="30" Name="cbSerwery" ItemsSource="{Binding}" Width="300" Height="27" SelectionChanged="OnSerwerChanged" >
+            <ComboBox Canvas.Left="10" Canvas.Top="30" Name="cbSerwery"
+                      ItemsSource="{Binding FtpEndpoints}"
+                      SelectedItem="{Binding SelectedFtpEndpoint, Mode=TwoWay}" Width="300" Height="27">
                 <ComboBox.ItemTemplate>
                     <DataTemplate>
                         <TextBlock>
@@ -32,7 +36,9 @@
                 </ComboBox.ItemTemplate>
             </ComboBox>
         </Canvas>
-        <ListView Grid.Row="1" Grid.ColumnSpan="2" Margin="10" Name="lvHarmonogramy" ItemsSource="{Binding}" MouseDoubleClick="OnDoubleClick">
+        <ListView Grid.Row="1" Grid.ColumnSpan="2" Margin="10" Name="lvHarmonogramy" 
+                  SelectionMode="Single" MouseDoubleClick="OnDoubleClick"
+                  ItemsSource="{Binding FtpSchedules}" SelectedItem="{Binding SelectedFtpSchedule}">
             <ListView.View>
                 <GridView>
                     <GridViewColumn Header="Nazwa" Width="130"
@@ -51,12 +57,12 @@
             </ListView.View>
         </ListView>
         <StackPanel Grid.Row="2" Grid.Column="0" Orientation="Horizontal">
-            <Button Name="btAdd" Click="OnAdd">Dodaj</Button>
-            <Button Name="btEdit" Click="OnChange" IsEnabled="{Binding SelectedItem, ElementName=lvHarmonogramy, Converter={StaticResource SelectedItemEnabler}}">Zmień</Button>
-            <Button Name="btDel" Click="OnRemove" IsEnabled="{Binding IsEnabled, ElementName=btEdit}">Usuń</Button>
+            <Button Command="{Binding AddScheduleCommand}">Dodaj</Button>
+            <Button Command="{Binding ModifyScheduleCommand}">Zmień</Button>
+            <Button Command="{Binding DeleteScheduleCommand}">Usuń</Button>
         </StackPanel>
         <StackPanel Grid.Row="2" Grid.Column="1" Orientation="Horizontal" HorizontalAlignment="Right">
-            <Button Name="btRelo" Click="OnRelo">Odśwież</Button>
+            <Button Command="{Binding ReloadScheduleCommand}">Odśwież</Button>
         </StackPanel>
     </Grid>
 </UserControl>
