--- a/Views/Serwery.xaml
+++ b/Views/Serwery.xaml
@@ -1,9 +1,11 @@
 ﻿<UserControl x:Class="FtpDiligent.Views.Serwery"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             mc:Ignorable="d" 
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:prism="http://prismlibrary.com/"
+             prism:ViewModelLocator.AutoWireViewModel="True"
+             mc:Ignorable="d"
              d:DesignHeight="770" d:DesignWidth="980">
     <Grid Background="{StaticResource Tlo}">
         <Grid.RowDefinitions>
@@ -14,7 +16,8 @@
             <ColumnDefinition/>
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
-        <ListView Name="lvSerwery" Grid.ColumnSpan="2" Margin="10" ItemsSource="{Binding}" MouseDoubleClick="OnDoubleClick">
+        <ListView Name="lvSerwery" Grid.ColumnSpan="2" Margin="10" MouseDoubleClick="OnDoubleClick"
+                  ItemsSource="{Binding FtpEndpoints}" SelectedItem="{Binding SelectedFtpEndpoint, Mode=TwoWay}">
             <ListView.View>
                 <GridView>
                     <GridViewColumn Header="Serwer" Width="190"
@@ -37,14 +40,14 @@
             </ListView.View>
         </ListView>
         <StackPanel Grid.Row="1" Grid.Column="0" Orientation="Horizontal">
-            <Button Name="btAdd" Click="OnAdd">Dodaj</Button>
-            <Button Name="btEdit" Click="OnChange" IsEnabled="{Binding SelectedItem, ElementName=lvSerwery, Converter={StaticResource SelectedItemEnabler}}">Zmień</Button>
-            <Button Name="btDel" Click="OnRemove" IsEnabled="{Binding IsEnabled, ElementName=btEdit}">Usuń</Button>
+            <Button Command="{Binding AddEndpointCommand}">Dodaj</Button>
+            <Button Command="{Binding ModifyEndpointCommand}">Zmień</Button>
+            <Button Command="{Binding DeleteEndpointCommand}">Usuń</Button>
         </StackPanel>
         <StackPanel Grid.Row="1" Grid.Column="1" Orientation="Horizontal" HorizontalAlignment="Right">
-            <Button Name="btRelo" Click="OnRelo">Odśwież</Button>
-            <Button Name="btTest" Click="OnTest" IsEnabled="{Binding IsEnabled, ElementName=btEdit}">Testuj</Button>
-            <Button Name="btSync" Click="OnSync" IsEnabled="{Binding IsEnabled, ElementName=btEdit}">Pobierz</Button>
+            <Button Command="{Binding ReloadEndpointCommand}">Odśwież</Button>
+            <Button Command="{Binding TestEndpointCommand}">Testuj</Button>
+            <Button Command="{Binding SynchronizeEndpointCommand}">Pobierz</Button>
         </StackPanel>
     </Grid>
 </UserControl>
