--- a/Views/Sterowanie.xaml
+++ b/Views/Sterowanie.xaml
@@ -1,8 +1,10 @@
 ﻿<UserControl x:Class="FtpDiligent.Views.Sterowanie"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:prism="http://prismlibrary.com/"
+             prism:ViewModelLocator.AutoWireViewModel="True"
              mc:Ignorable="d" 
              d:DesignHeight="770" d:DesignWidth="980">
     <Grid Background="{StaticResource Tlo}">
@@ -21,11 +23,11 @@
                 <ColumnDefinition />
             </Grid.ColumnDefinitions>
             <TextBox Margin="10 10 0 0" Text="Tryb pobierania:" Width="90" HorizontalAlignment="Left" IsReadOnly="True"/>
-            <ComboBox Grid.Row="1" Margin="10 2 0 10" Name="cbSyncMode" Width="200" Height="26" SelectedValue="{Binding Path=m_syncModeProp, Mode=TwoWay}" IsEnabled="{Binding IsEnabled, ElementName=btRunSync}"/>
+            <ComboBox Grid.Row="1" Margin="10 2 0 10" Name="cbSyncMode" Width="200" Height="26" ItemsSource="{Binding SynchronizationModes}" SelectedValue="{Binding SelectedSyncMode, Mode=TwoWay}" IsReadOnly="{Binding Processing}"/>
             <StackPanel Grid.Row="1" Grid.Column="1" Orientation="Horizontal" HorizontalAlignment="Right">
-                <Button Margin="0 2 0 10" Name="btRunSync" Content="Uruchom przesyłanie" Click="OnStartSync"/>
-                <Button Margin="10 2 0 10" Name="btStopSync" Content="Zatrzymaj przesyłanie" IsEnabled="False" Click="OnStopSync"/>
-                <Button Margin="10 2 10 10" Name="btClearLog" Content="Wyczyść komunikaty" Click="OnClearLog"/>
+                <Button Margin="0 2 0 10" Name="btRunSync" Content="Uruchom przesyłanie" Command="{Binding StartProcessingCommand}"/>
+                <Button Margin="10 2 0 10" Name="btStopSync" Content="Zatrzymaj przesyłanie" Command="{Binding StopProcessingCommand}"/>
+                <Button Margin="10 2 10 10" Name="btClearLog" Content="Wyczyść komunikaty" Command="{Binding ClearLogsCommand}"/>
             </StackPanel>
         </Grid>
         <Grid Grid.Row="1">
@@ -38,8 +40,8 @@
                 <ColumnDefinition />
             </Grid.ColumnDefinitions>
             <TextBox Margin="10 0 0 0" Text="Komunikaty bieżące:" IsReadOnly="True"/>
-            <TextBox Grid.Column="1" Margin="0 0 10 0" Width="700" Name="tbNextSync" IsReadOnly="True" TextAlignment="Right" HorizontalAlignment="Right"/>
-            <ListBox Grid.Row="1" Grid.ColumnSpan="2" Margin="10,2,10,10" Name="lbLog"/>
+            <TextBox Grid.Column="1" Margin="0 0 10 0" Width="700" IsReadOnly="True" TextAlignment="Right" HorizontalAlignment="Right" Text="{Binding NextSyncDateTime}"/>
+            <ListBox Grid.Row="1" Grid.ColumnSpan="2" Margin="10,2,10,10" ItemsSource="{Binding MessageLog}"/>
         </Grid>
         <Grid Grid.Row="2">
             <Grid.RowDefinitions>
@@ -51,7 +53,7 @@
                 <ColumnDefinition />
             </Grid.ColumnDefinitions>
             <TextBox Margin="10 0 5 0" Height="20" HorizontalAlignment="Left" Text="Informacje o błędach:" IsReadOnly="True"/>
-            <ListView Grid.Row="1" Margin="10 2 5 10" Name="lvErrLog">
+            <ListView Grid.Row="1" Margin="10 2 5 10" ItemsSource="{Binding ErrorLog}">
                 <ListView.View>
                     <GridView>
                         <GridViewColumn Header="Status">
@@ -74,8 +76,8 @@
                     </GridView>
                 </ListView.View>
             </ListView>
-            <TextBox Grid.Column="1" Margin="5 0 10 0" Height="20" HorizontalAlignment="Left" Name="tbFilesCount" Text="{Binding Mode=OneWay, StringFormat=Przesłane pliki [{0}]:}" IsReadOnly="True"/>
-            <ListView Grid.Row="1" Grid.Column="1" Margin="5 2 10 10" Name="lvFilesLog" ItemsSource="{Binding}">
+            <TextBox Grid.Column="1" Margin="5 0 10 0" Height="20" HorizontalAlignment="Left" Name="tbFilesCount" Text="{Binding Path=FilesCount, Mode=OneWay, StringFormat=Przesłane pliki [{0}]:}" IsReadOnly="True"/>
+            <ListView Grid.Row="1" Grid.Column="1" Margin="5 2 10 10" ItemsSource="{Binding FtpFileLog}">
                 <ListView.View>
                     <GridView>
                         <GridViewColumn Header="Operacja">
