--- a/Views/MainWindow.xaml
+++ b/Views/MainWindow.xaml
@@ -5,8 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d"
         Title="FtpDiligent" Height="800" Width="1000"
-        Icon="/Images/ftpgetw.ico"
-        Closed="Window_Closed">
+        Icon="/Images/ftpgetw.ico">
     <TabControl Name="tcMain">
         <TabItem Name="tabSterowanie">
             <TabItem.Header>
