--- a/Views/Sterowanie.xaml
+++ b/Views/Sterowanie.xaml
@@ -5,8 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:prism="http://prismlibrary.com/"
              prism:ViewModelLocator.AutoWireViewModel="True"
-             mc:Ignorable="d" 
-             d:DesignHeight="770" d:DesignWidth="980">
+             mc:Ignorable="d" d:DesignHeight="770" d:DesignWidth="980">
     <Grid Background="{StaticResource Tlo}">
         <Grid.RowDefinitions>
             <RowDefinition Height="70"/>
